--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -69,8 +69,8 @@ authen's website. very cool!
         <p>enjoy your time in my contribution to the world wide web</p>
         <marquee style="margin: 30px">
           <a href="/pages/freemoney.html">click here for free money</a>
-        </marquee>        <!-- 
-      the part of the marquee (not a marquee anymore lmao) of a bunch of buttons of other sites and alt text 
+        </marquee>        <!--
+      the part of the marquee (not a marquee anymore lmao) of a bunch of buttons of other sites and alt text
       you can skip this part of the code its kinda messy
       -->
           <img
@@ -84,12 +84,12 @@ authen's website. very cool!
           <a href="https://bonkiscoolsite.neocities.org" target="_blank"
             ><img
               alt="a button that sends you to bonkis site"
-              src="https://bonkiscoolsite.neocities.org/images/geocitystuff/buttons/bonkibutton.gif"
+              src="/images/bonkibutton.gif"
           /></a>
           <a href="https://emmabelotti.neocities.org/" target="_blank"
             ><img
               alt="A button that redirects to EM.Mondo"
-              src="https://emmabelotti.neocities.org/file/gif/sitebutton.gif"
+              src="/images/emmondo.gif"
           /></a>
           <a href="https://ikaroll.neocities.org/" target="_blank"
             ><img
@@ -97,7 +97,7 @@ authen's website. very cool!
               alt="ikaroll"
           /></a>
           <a href="https://zj.neocities.org" target="_blank"
-            ><img src="https://zj.neocities.org/gifs/zj's%20pingu%20button.png"
+            ><img src="/images/zj's%20pingu%20button.png"
             alt="zj"
           /></a>
           <a href="https://unsaved.info" target="_blank"
@@ -122,17 +122,17 @@ authen's website. very cool!
           <a href="https://boxy.neocities.org/" target="_blank"
             ><picture
               ><source
-                srcset="https://boxy.neocities.org/images/ggWebp.webp"
+                srcset="/images/ggWebp.webp"
                 type="image/webp"
                 alt="boxy"/>
-              <img src="https://boxy.neocities.org/images/ggPng.png" alt="boxy"/></picture
+              <img src="/images/ggPng.png" alt="boxy"/></picture
           ></a>
           <img
             src="/images/midi_files_now.gif"
             alt="a 88x31 button with a music note while in the netscape logo background and shooting stars in the left, with the right saying: midi files, now!"
           />
           <a href="https://garf.neocities.org/"
-            ><img src="https://garf.neocities.org/garf.gif"
+            ><img src="/images/garf.gif"
           /></a>
           <img
               src="/images/blackfacts.gif"
@@ -147,7 +147,7 @@ authen's website. very cool!
               height="31"
           />
           <a href="https://karebu.gay" target="_blank">
-          <img width="88" height="31" style="image-rendering:pixelated" src="https://karebu.gay/badge.png">
+          <img width="88" height="31" style="image-rendering:pixelated" src="/images/jadekare.png">
           </a>
           <a href="https://fsky.io" target="_blank">
           <img width="88" height="31" style="image-rendering:pixelated" src="/images/badge.png">
@@ -155,28 +155,28 @@ authen's website. very cool!
           <a href="https://autumn.town" target="_blank">
           <img width="88" height="31" src="/images/New Project(2).gif" style="image-rendering:pixelated" >
           </a>
-          <a href="https://fourstar.nekoweb.org" target="_blank"><img width="88px" height="31px" src="https://fourstar.nekoweb.org/88x31.gif" alt="FourStar" title="FourStar"></a>
+          <a href="https://fourstar.nekoweb.org" target="_blank"><img width="88px" height="31px" src="/images/fourstar.gif" alt="FourStar" title="FourStar"></a>
           <a href="https://youtu.be/03CmiLP_Bx0?si=w8IqeWEV615GdeHF" target="_blank">
           <img width="88" height="31" src="/images/ty.gif">
           </a>
           <a href="https://larsfrommars.neocities.org/" target="_blank">
-          <img width="88" height="31" src="https://larsfrommars.neocities.org/buttons/lars.png">
+          <img width="88" height="31" src="/images/lars.png">
           </a>
-          <a href="https://synth.download"><img src="https://synth.download/assets/buttons/sneexy.svg" alt="Sneexy" title="Sneexy"></a>
+          <a href="https://synth.download"><img src="/images/sneexy.svg" alt="Sneexy" title="Sneexy"></a>
           <a href="https://jack.cab" target="_blank">
           <img width="88" height="31" src="/images/Untitled.png">
           </a>
           <a href="https://velzie.rip" target="_blank">
-          <img width="88" height="31" src="https://velzie.rip/88x31.png">
+          <img width="88" height="31" src="/images/88x31.png">
           </a>
           <a href="https://blueb.pages.gay" target="_blank">
-          <img width="88" height="31" src="https://blueb.pages.gay/_nuxt/kattgutte.D3vLs2tl.png">
+          <img width="88" height="31" src="/images/kattgutte.D3vLs2tl.png">
           </a>
           <a href="https://besties.house" target="_blank">
           <img width="88" height="31" src="/images/besties.gif">
           </a>
           <a href="https://vea.st" target="_blank">
-          <img width="88" height="31" src="https://vea.st/button.png">
+          <img width="88" height="31" src="/images/veast.png">
           </a>
           <a href="https://rinici.de">
   <img src="https://rinici.de/button.png">
@@ -216,7 +216,7 @@ authen's website. very cool!
           /></a>
         </p>
         <p>
-  
+
       </div>
       <!--- lil part with all the pages -->
 <div id="navbar-container"></div>
