--- a/pages/services.html
+++ b/pages/services.html
@@ -82,7 +82,9 @@ i host a few services on this domain and heres a list of them
 <p><a href="https://relay.authenyo.xyz">activitypub relay</a></p>
 <p><a href="https://4get.authenyo.xyz">4get (search engine)</a></p>
 <p><a href="https://stream.authenyo.xyz">owncast</a></p>
-<p><a href="http://irisyn4yzwsu6cvcuv67uufivznewgro6iwfwvz4xo57ksdzpe2gqzad.onion">authenyo.xyz tor mirror</a></p>
+<p><a href="http://authen7lfz4b3bb7dlt57vphk47tz7vpkz2o6htjg6gy734zjxfobsqd.onion">authenyo.xyz tor mirror</a></p>
+<p><a href="https://xmpp.authenyo.xyz">snikket (xmpp) (invite-only, ask)</a></p>
+<p><a href="https://chan.authenyo.xyz">irischan 2 (vichan)</a></p>
       </div>
 
 <div id="navbar-container"></div>
