--- a/navbar2.html
+++ b/navbar2.html
@@ -1,4 +1,4 @@
-      <div class="item2" style="height: 1400px">
+<head><base target="_parent"><link rel="stylesheet" href="/css/style.css" /></head>
         <div class="borderthing" style="width: 97%">
           <p>pages</p>
         </div>
@@ -170,4 +170,3 @@
           "
         ></iframe>
         <iframe width="300" height="250" style="border:none" src="https://googol.neocities.org/neolink/embed.html" name="neolink"></iframe>
-    </div>
