--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ authen's website. very cool!
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/7.css">
     <!-- script tag for the mouse effects -->
-    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
     <!--- embed meta tags for sites like twitter and discord -->
     <meta content="authen's site" property="og:title" />
     <meta
@@ -57,16 +56,10 @@ authen's website. very cool!
       name="google-site-verification"
       content="-7LhtnT_LlMv8cDYlVMUvo8NvkueZUl5oEg-qA9YOtA"
     />
-    <meta name="”robots”" content="”noai," noimageai” />
     <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
     <!-- script tag for the mouse effects 2 -->
-    <script type="module">
-      import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
-
-      new fairyDustCursor();
-    </script>
 <div class="window active" style="max-width: 600px; margin: auto">
   <div class="title-bar">
     <div class="title-bar-text">hey, welcome to my site!</div>
@@ -89,7 +82,7 @@ authen's website. very cool!
       <p>also if possible enable javascript its not like unusable but it looks cooler</p>
       <p><a href="https://authenyo-xyz.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en-US&_x_tr_pto=wapp">translated version</a></p>
       <button><a href="/pages/happiness.html" style="color: #000000">enter</a></button>
-      <p style="display: none;"><a href="https://mk.noob.quest/@authen">balls</a></p>
+      <p style="display: none;"><a href="https://brain.worm.pink/authen">balls</a></p>
   </div>
 </div>
   </body>
