--- a/not_found.html
+++ b/not_found.html
@@ -6,7 +6,7 @@
     <title>page not found</title>
     <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
-    <meta content="page not found: heres this silly cat" property="og:title" />
+    <meta content="page not found: heres this wildkarduno song" property="og:title" />
     <meta
       content="best page not found ever made by authenyo"
       property="og:description"
@@ -15,6 +15,7 @@
     <meta content="/images/404.jpg" property="og:image" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
+    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
   </head>
   <body>
     <marquee><iframe width="560" height="315" src="https://www.youtube.com/embed/2ByUkVOkF6c?si=4Ckr7Kumg_nwmtdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></marquee>
