--- a/pages/coolmusic.html
+++ b/pages/coolmusic.html
@@ -7,7 +7,6 @@
     <meta name="author" content="authen" />
     <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
     <meta content="cool music" property="og:title" />
     <meta
       content="music that i find cool - authen's site"
@@ -17,65 +16,12 @@
     <meta content="/images/coolmusic.png" property="og:image" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
-    <meta name="”robots”" content="”noai," noimageai” />
-    <script type="text/javascript">
-      // <![CDATA[
-      var speed = 100; // speed of wobbling, lower is faster
-      var height = 3; // height of wobbling in pixels
-      var alink = ""; // page to link text to (set to ="" for no link)
-
-      /****************************
-       *    Wobbly Text Effect     *
-       *(c) 2003-6 mf2fm web-design*
-       *  http://www.mf2fm.com/rv  *
-       * DON'T EDIT BELOW THIS BOX *
-       ****************************/
-      var wobtxt,
-        wobble,
-        wobcnt = 0;
-      window.onload = function () {
-        if (document.getElementById) {
-          var i, wobli;
-          wobble = document.getElementById("wobble");
-          wobtxt = wobble.firstChild.nodeValue;
-          while (wobble.childNodes.length)
-            wobble.removeChild(wobble.childNodes[0]);
-          for (i = 0; i < wobtxt.length; i++) {
-            wobli = document.createElement("span");
-            wobli.setAttribute("id", "wobb" + i);
-            wobli.style.position = "relative";
-            wobli.appendChild(document.createTextNode(wobtxt.charAt(i)));
-            if (alink) {
-              wobli.style.cursor = "pointer";
-              wobli.onclick = function () {
-                top.location.href = alink;
-              };
-            }
-            wobble.appendChild(wobli);
-          }
-          setInterval("wobbler()", speed);
-        }
-      };
-
-      function wobbler() {
-        for (var i = 0; i < wobtxt.length; i++)
-          document.getElementById("wobb" + i).style.top =
-            Math.round(height * Math.sin(i + wobcnt)) + "px";
-        wobcnt++;
-      }
-      // ]]>
-    </script>
   </head>
   <body>
-    <script type="module">
-      import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
-
-      new fairyDustCursor();
-    </script>
         <div class="flex">
       <div class="header">
         <marquee>
-          <div id="wobble">authen</div>
+          <div >authen</div>
         </marquee>
       </div>
       <div class="item" style="height: 1900px">
