--- a/pages/freemoney.html
+++ b/pages/freemoney.html
@@ -7,7 +7,6 @@
     <meta name="author" content="authen" />
     <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
     <meta content="real free money" property="og:title" />
     <meta
       content="free money and everything you desire"
@@ -18,57 +17,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
     <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
-    <script type="text/javascript">
-          <meta name=”robots” content=”noai, noimageai”>
-      // <![CDATA[
-      var speed=100; // speed of wobbling, lower is faster
-      var height=3; // height of wobbling in pixels
-      var alink=""; // page to link text to (set to ="" for no link)
-
-      /****************************
-      *    Wobbly Text Effect     *
-      *(c) 2003-6 mf2fm web-design*
-      *  http://www.mf2fm.com/rv  *
-      * DON'T EDIT BELOW THIS BOX *
-      ****************************/
-      var wobtxt, wobble, wobcnt=0;
-      window.onload=function() { if (document.getElementById) {
-        var i, wobli;
-        wobble=document.getElementById("wobble");
-        wobtxt=wobble.firstChild.nodeValue;
-        while (wobble.childNodes.length) wobble.removeChild(wobble.childNodes[0]);
-        for (i=0; i<wobtxt.length; i++) {
-          wobli=document.createElement("span");
-          wobli.setAttribute("id", "wobb"+i);
-          wobli.style.position="relative";
-          wobli.appendChild(document.createTextNode(wobtxt.charAt(i)));
-          if (alink) {
-            wobli.style.cursor="pointer";
-            wobli.onclick=function() { top.location.href=alink; }
-          }
-          wobble.appendChild(wobli);
-        }
-        setInterval("wobbler()", speed);
-      }}
-
-      function wobbler() {
-        for (var i=0; i<wobtxt.length; i++) document.getElementById("wobb"+i).style.top=Math.round(height*Math.sin(i+wobcnt))+"px"
-        wobcnt++;
-      }
-      // ]]>
-    </script>
-    <script defer src="/style.js"></script>
   </head>
   <body>
-    <script type="module">
-      import { fairyDustCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
-
-      new fairyDustCursor();
-    </script>
         <div class="flex">
       <div class="header">
         <marquee>
-          <div id="wobble">authen</div>
+          <div >authen</div>
         </marquee>
       </div>
       <div class="item">
