--- a/pages/links.html
+++ b/pages/links.html
@@ -16,15 +16,13 @@
     <meta content="/images/screenie.png" property="og:image" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta content="#a89984" data-react-helmet="true" name="theme-color" />
-    <meta name="”robots”" content="”noai," noimageai” />
    <script defer src="https://collecting.slurs.online/script.js" data-website-id="10adc62c-d228-48f0-98ec-c668a326d6ee"></script>
-       <script defer src="/style.js"></script>
   </head>
   <body>
     <div class="flex">
       <div class="header">
         <marquee>
-          <div id="wobble">authen</div>
+          <div >authen</div>
         </marquee>
       </div>
       <div class="item" style="height: 1400px">
