--- a/navbar2.html
+++ b/navbar2.html
@@ -1,4 +1,6 @@
-<head><base target="_parent"><link rel="stylesheet" href="/css/style.css" /></head>
+<head><base target="_parent"><link rel="stylesheet" href="/css/style.css" /><style>body::after {
+  background-image: none;
+  }</style></head>
         <div class="borderthing" style="width: 97%">
           <p>pages</p>
         </div>
